# SearchAssist-Toolkit

Answering/: README.md  base.js  package-lock.json  package.json  server.js
Blog/: Benchmarking Enterprise RAG Providers.md  BlogsIndex.md  CustomEmbeddigs.md  (+7 more)
Evaluation/RAG_Evaluator/: .env.example  Dockerfile  README.md  pyproject.toml
Evaluation/RAG_Evaluator/rag_evaluator/: elmo_questions.xlsx  get_chunks.py  main.py  sample_input_file.xlsx
Evaluation/RAG_Evaluator/rag_evaluator/api/: SASearch.py  XOSearch.py
Evaluation/RAG_Evaluator/rag_evaluator/config/: configManager.py
Evaluation/RAG_Evaluator/rag_evaluator/evaluators/: baseEvaluator.py  cragEvaluator.py  list_evaluator.py  ragasEvaluator.py
Evaluation/RAG_Evaluator/rag_evaluator/routes/: app.py
Evaluation/RAG_Evaluator/rag_evaluator/services/: mailService.py
Evaluation/RAG_Evaluator/rag_evaluator/utils/: dbservice.py  jti.py
Evaluation/RAG_Evaluator/src/: main.py  requirements.txt  requirements_rag_evaluator.txt  sample_input_file.xlsx
Evaluation/RAG_Evaluator/src/api/: SASearch.py
Evaluation/RAG_Evaluator/src/config/: config.json
Evaluation/RAG_Evaluator/src/evaluators/: cragEvaluator.py  ragasEvaluator.py
Evaluation/RAG_Evaluator/src/outputs/: sample_input_file_rag_evaluation_output_20240723-164726.xlsx
Evaluation/RAG_Evaluator/src/prompts/: prompts.json
Evaluation/RAG_Evaluator/src/routes/: app.py
Evaluation/RAG_Evaluator/src/services/: mailService.py  run_eval.py
Evaluation/RAG_Evaluator/src/utils/: dataProcessing.py  dbservice.py  evaluationResult.py  fileHandling.py
(+89 files in other folders)
