[project]
name = "rag-evaluator"
version = "0.1.0"
description = ""
authors = [
    {name = "Mark Kerollos",email = "mark.kerollos@elmosoftware.com.au"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "openai (>=1.59.7,<2.0.0)",
    "ragas (>=0.2.11,<0.3.0)",
    "langchain-openai (>=0.3.0,<0.4.0)",
    "datasets (>=3.2.0,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "fastapi (>=0.115.6,<0.116.0)",
    "transformers (>=4.48.0,<5.0.0)",
    "pymongo (>=4.10.1,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
